<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAssessment</string>
    <string name="action_settings">Settings</string>
    <string name="pref_theme_customization">Theme customization</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_summary">You can choose the theme of the App!!</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_toast">The theme change and other settings will only have effect once you restart the app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app">Markdown Constructor</string>
    <string name="description">Click CREATE to start the construction of you Markdown!!</string>
    <string name="button_start">Create</string>
    <string name="text_view_initialize">Initialize your markdown with a Title!</string>
    <string name="radio_button_h1">H1</string>
    <string name="radio_button_h2">H2</string>
    <string name="radio_button_h3">H3</string>
    <string name="radio_button_h4">H4</string>
    <string name="radio_button_h5">H5</string>
    <string name="radio_button_h6">H6</string>
    <string name="edit_text_title">Enter your title</string>
    <string name="button_add_title">Next</string>
    <string name="text_view_constructor">Add your tags!</string>
    <string name="button_add">Add</string>
    <string name="button_add_text">Text</string>
    <string name="button_add_link">Link/Image</string>
    <string name="button_add_image">Image</string>
    <string name="text_view_subtitle">Add your subtitle</string>
    <string name="edit_text_subtitle">Add your subtitle</string>
    <string name="button_add_subtitle">Subtitle</string>
    <string name="text_view_emphasis">Add your text with emphasis</string>
    <string name="radio_button_italic">Italic</string>
    <string name="radio_button_bold">Bold</string>
    <string name="radio_button_scratch">Scratch</string>
    <string name="button_show">Show Markdown!</string>
    <string name="button_ok">OK</string>
    <string name="button_go_back">Back</string>
    <string name="text_view_link">Add your link</string>
    <string name="text_view_text">Text:</string>
    <string name="text_view_url">Url:</string>
    <string name="radio_button_link">Link</string>
    <string name="radio_button_image">Image</string>
    <string name="radio_button_normal">Normal</string>
    <string name="button_cancel">Clean</string>

</resources>
