<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.mobilemakers.firstassessment.TextFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff000000">

        <TextView
            android:id="@+id/text_view_emphasis"
            android:text="@string/text_view_emphasis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:checkedButton="@+id/radio_button_normal"
            android:id="@+id/radio_group_emphasis">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_normal"
                android:id="@id/radio_button_normal"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_italic"
                android:id="@+id/radio_button_italic"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_bold"
                android:id="@+id/radio_button_bold"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_scratch"
                android:id="@+id/radio_button_scratch"
                android:layout_weight="1" />
        </RadioGroup>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_paragraph_emphasis"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textMultiLine"
            android:layout_weight="0.26" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/button_add_emphasis"
            android:layout_gravity="right"
            android:layout_marginRight="25dp" />

    </LinearLayout>

</LinearLayout>
